--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel=stylesheet type=text/css href=main.css />
 	<script src=tools_web.js defer></script>
 	<script src=main.js defer></script>
+	<script src=colors.js defer></script>
+	<script src=uris.js defer></script>
 </head>
 <body>
 </body>
