ADDED CELLULAR AUTOMATA
(this is very good)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src=main.js defer></script>
 	<script src=colors.js defer></script>
 	<script src=uris.js defer></script>
+	<script src=ca.js defer></script>
 </head>
 <body>
 </body>
